--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -19,7 +19,7 @@
             android:id="@+id/userPicture"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            tools:src="@drawable/letterrafael"
+            android:src="@drawable/default_image"
             android:layout_gravity="start"
             />
 
