--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -100,6 +100,7 @@
             android:layout_marginStart="5dp"
             android:text="Reenviar código"
             android:textSize="15sp"
+            android:textColor="@color/greenTestDark"
             android:textStyle="bold"/>
 
     </LinearLayout>
