--- a/app/src/main/res/layout/activity_teamsettings.xml
+++ b/app/src/main/res/layout/activity_teamsettings.xml
@@ -30,6 +30,7 @@
             android:src="@drawable/letterequipe"/>
 
         <TextView
+            android:id="@+id/lblTeamName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nome da Equipe"
