--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".home.homefragments.Teams"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,26 +14,29 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="20dp"
+
+            android:background="@color/pastel">
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imgTeam"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:src="@drawable/letterequipe"
-                android:layout_marginStart="20dp"
+                android:src="@drawable/e"
+                android:layout_marginStart="15dp"
                 android:padding="5dp"
                 android:layout_gravity="start"/>
 
             <TextView
+                android:id="@+id/lblTeamName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Nome da Equipe"
-                tools:text = "EcoSynergy"
                 android:textStyle="bold"
                 android:textSize="20sp"
                 android:layout_marginStart="10dp"
