--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="greenTest">#ADE5AB</color>
     <color name="greenTestB">#ADE5AB</color>
+    <color name="greenTestDark">#059C00</color>
     <color name="blue">#0091FF</color>
     <color name="pastel">#DADADA</color>
 </resources>
