--- a/app/src/main/res/layout/fragment_analytics.xml
+++ b/app/src/main/res/layout/fragment_analytics.xml
@@ -1,25 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".home.homefragments.Analytics">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
-
-
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ola"
-            android:textStyle="bold"
-            android:textSize="20sp"/>
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="10dp">
+
+            <Button
+                android:id="@+id/btnNewSensor"
+                android:text="Novo sensor"
+                android:layout_width="180dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="10dp"/>
+            <Button
+                android:id="@+id/btnSensor"
+                android:text="Gerenciar sensores"
+                android:layout_width="180dp"
+                android:layout_height="50dp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="380dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="start">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Monitoramento mensal dos gases emitidos"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:layout_marginBottom="10dp"/>
+
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:entries="@array/time_array"
+                android:layout_marginBottom="20dp"
+                android:background="@color/pastel"/>
+
+        </LinearLayout>
+
+        <com.google.android.material.imageview.ShapeableImageView
+            app:shapeAppearanceOverlay="@style/RoundedSquare"
+            android:layout_width="380dp"
+            android:layout_height="300dp"
+            android:background="@color/pastel"
+            android:layout_gravity="center"
+            android:layout_marginBottom="30dp"/>
+
+        <com.google.android.material.imageview.ShapeableImageView
+            app:shapeAppearanceOverlay="@style/RoundedSquare"
+            android:layout_width="380dp"
+            android:layout_height="300dp"
+            android:background="@color/pastel"
+            android:layout_gravity="center"
+            android:layout_marginBottom="30dp"/>
 
 
     </LinearLayout>
