Register Activities XML

--- a/app/src/main/res/layout/activity2_register.xml
+++ b/app/src/main/res/layout/activity2_register.xml
@@ -1,65 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".register.RegisterActivity2"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="top">
 
-    <ImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/logo_transparent"
-        android:layout_marginBottom="20dp"/>
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@null"
+        android:src="@drawable/baseline_arrow_back_24"
+        android:scaleType="fitXY"
+        android:gravity="top"
+        android:layout_margin="15dp"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="300dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Nacionalidade"
-        android:layout_marginBottom="15dp">
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_marginTop="20dp">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txtNationality"
-            android:layout_width="match_parent"
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:src="@drawable/logo_transparent"
+            android:layout_marginBottom="20dp"/>
+
+            <AutoCompleteTextView
+                android:layout_width="300dp"
+                android:layout_height="60dp"
+                android:id="@+id/txtNationality"
+                android:inputType="text"
+                android:hint="Nacionalidade"
+                android:layout_marginBottom="30dp"
+                android:completionThreshold="1"
+                android:background="@drawable/spinner_background"
+                android:textColor="@color/black"
+                android:textColorHint="@color/gray"/>
+
+            <Spinner
+                android:entries="@array/gender_array"
+                android:id="@+id/spinnerGender"
+                android:layout_width="300dp"
+                android:layout_height="60dp"
+                android:spinnerMode="dropdown"
+                android:background="@drawable/spinner_background"
+                android:layout_marginBottom="30dp"/>
+
+        <Button
+            android:id="@+id/btnregister"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:hint="Gênero"
-        android:layout_marginBottom="15dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txtGender"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-    android:layout_width="300dp"
-    android:layout_height="wrap_content"
-    android:hint="Data de Nascimento"
-    android:layout_marginBottom="15dp">
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/txtDateBirth"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="date"/>
-</com.google.android.material.textfield.TextInputLayout>
-
-    <Button
-        android:id="@+id/btnregister"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:text="CADASTRAR"
-        android:background="@drawable/button_background"
-        android:textStyle="bold"/>
-
+            android:text="CADASTRAR"
+            android:background="@drawable/button_background"
+            android:textStyle="bold"/>
+    </LinearLayout>
 </LinearLayout>
