--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Base.Theme.EcoSynergyApp" parent="Theme.Material3.Light.NoActionBar">
-        <item name="colorPrimary">@color/greenTest</item>
-        <item name="colorSecondary">@color/greenTestB</item>
-        <item name="android:statusBarColor">@color/greenTest</item>
-    </style>
-
-    <style name="SplashScreenTheme" parent="Theme.Material3.Light.NoActionBar">
-        <item name="colorPrimary">@color/greenTest</item>
-        <item name="colorSecondary">@color/greenTestB</item>
-        <item name="android:statusBarColor">@color/greenTest</item>
+        <item name="colorPrimary">@color/green</item>
+        <item name="colorSecondary">@color/green</item>
+        <item name="android:statusBarColor">@null</item>
     </style>
 </resources>
