--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="gray">#B9B2BB</color>
+    <color name="grayDark">#4A4A4A</color>
     <color name="white">#FFFFFF</color>
     <color name="white2">#FFF7FF</color>
     <color name="green">#81DC7E</color>
